objects/LLC_BI__Lien__c.object
<CustomObject>
    <fields>
        <fullName>nSBA__Shared_Lien_With_Other_Lender_Amount__c</fullName>
        <description>If the lien is shared with other lender, this field holds the shared lien Amount. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>If the lien is shared with other lender, this field holds the shared lien Amount. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Shared Lien With Other Lender Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Shared_Lien_With_Other_Lender_Name__c</fullName>
        <description>If the lien is shared with other lender, this field holds the Name of Lender that the lien is shared with. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>If the lien is shared with other lender, this field holds the Name of Lender that the lien is shared with. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Shared Lien With Other Lender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Statement_Of_Non_Homestead_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether statement of non-homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether statement of non-homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Statement Of Non Homestead Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Statutory_Power_Of_Sale_Language_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Statutory Power Of Sale Language is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether Statutory Power Of Sale Language is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Statutory Power Of Sale Language Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Survey_Certified_To_Lender_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Survey Certified To Lender is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether Survey Certified To Lender is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Survey Certified To Lender Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Taxes_And_Municipal_Liens_Curr_Or_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Mortgagee Title Policy must reflect that all taxes and municipal liens have been brought current or paid. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if Mortgagee Title Policy must reflect that all taxes and municipal liens have been brought current or paid. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Taxes And Municipal Liens Curr Or Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__WO_Exception_To_Homestead_Survey_Taxes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Mortgagee Title Policy is without exception to Homestead, Survey or Taxes. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if Mortgagee Title Policy is without exception to Homestead, Survey or Taxes. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>WO Exception To Homestead Survey Taxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Waiver_Of_Business_Homestead_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether waiver of business homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether waiver of business homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Waiver Of Business Homestead Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Waiver_Of_Redemption_Rights_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether waiver of redemption rights is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether waiver of redemption rights is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Waiver Of Redemption Rights Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Written_Waiver_Of_Homestead_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether written waiver of homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether written waiver of homestead is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Written Waiver Of Homestead Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Lien</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Lien Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>